# up-client-android-rust

./: Cargo.toml
src/: lib.rs  utransport.rs
up-client-android-rust/: Cargo.toml
up-client-android-rust/src/: lib.rs  transport.rs  transport_builder.rs
