[package]
name = "up-client-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0" }
jni = { version = "0.21.1" }
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "c705ac97602ad6917a93d23651e8a504ec7bb718" }
log = { version = "0.4.21" }
async-trait = { version = "0.1.79" }
lazy_static = { version = "1.4.0" }
protobuf = { version = "3.4.0" }
