[package]
name = "up-client-android-rust"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aidl-rust-codegen = { path = "../aidl-rust-codegen" }
async-trait = { workspace = true }
binder = {  workspace = true }
binder_tokio = {  workspace = true }
up-rust = { workspace = true }
ustreamer = { workspace = true }